tests/snapshots/r#mod__property__ical-11.snap
---
source: tests/mod.rs
expression: prop
---
name: SUMMARY
params: ContentLineParams([])
value: Some("escaped\\, comma and\\; semicolon\\nnewline")
