tests/snapshots/r#mod__property__ical-17.snap
---
source: tests/mod.rs
expression: prop
---
name: ATTENDEE
params: [("DELEGATED-TO", ["mailto:foo7@bar", "mailto:foo8@bar"]), ("CN", ["Foo; Bar"])]
value: Some("mailto:foo2@bar")
