tests/snapshots/r#mod__property__ical-18.snap
---
source: tests/mod.rs
expression: prop
---
name: ATTENDEE
params: [("CN", ["Foo, Bar"])]
value: Some("mailto:foo3@bar")
