tests/snapshots/r#mod__property__ical-2.snap
---
source: tests/mod.rs
expression: prop
---
name: CALSCALE
params: ContentLineParams([])
value: Some("GREGORIAN")
