tests/snapshots/r#mod__property__ical-21.snap
---
source: tests/mod.rs
expression: prop
---
name: ATTENDEE
params: [("DELEGATED-TO", ["mailto:foo7@bar"]), ("CN", ["Foo; Bar"])]
value: Some("mailto:foo6@bar")
